--- a/documentation/latex/asio_2regex_2regex_8cpp.tex
+++ b/documentation/latex/asio_2regex_2regex_8cpp.tex
@@ -3,7 +3,8 @@
 {\ttfamily \#include $<$iostream$>$}\newline
 {\ttfamily \#include $<$string$>$}\newline
 {\ttfamily \#include $<$boost/regex.\+hpp$>$}\newline
-Граф включаемых заголовочных файлов для asio/regex/regex.cpp\+:\nopagebreak
+Граф включаемых заголовочных файлов для asio/regex/regex.cpp\+:
+\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
