--- a/documentation/latex/asio_2server_2con__handler_8cpp.tex
+++ b/documentation/latex/asio_2server_2con__handler_8cpp.tex
@@ -4,7 +4,8 @@
 {\ttfamily \#include $<$boost/bind.\+hpp$>$}\newline
 {\ttfamily \#include $<$spdlog/spdlog.\+h$>$}\newline
 {\ttfamily \#include $<$spdlog/sinks/basic\+\_\+file\+\_\+sink.\+h$>$}\newline
-Граф включаемых заголовочных файлов для asio/server/con\+\_\+handler.cpp\+:\nopagebreak
+Граф включаемых заголовочных файлов для asio/server/con\+\_\+handler.cpp\+:
+\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
