--- a/documentation/latex/asio_2server_2con__handler_8h.tex
+++ b/documentation/latex/asio_2server_2con__handler_8h.tex
@@ -2,14 +2,16 @@
 \label{asio_2server_2con__handler_8h}\index{con\_handler.h@{con\_handler.h}}
 {\ttfamily \#include $<$boost/asio.\+hpp$>$}\newline
 {\ttfamily \#include $<$boost/enable\+\_\+shared\+\_\+from\+\_\+this.\+hpp$>$}\newline
-Граф включаемых заголовочных файлов для asio/server/con\+\_\+handler.h\+:\nopagebreak
+Граф включаемых заголовочных файлов для asio/server/con\+\_\+handler.h\+:
+\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
 \includegraphics[width=286pt]{asio_2server_2con__handler_8h__incl}
 \end{center}
 \end{figure}
-Граф файлов, в которые включается этот файл\+:\nopagebreak
+Граф файлов, в которые включается этот файл\+:
+\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
