--- a/documentation/latex/class_server_link.tex
+++ b/documentation/latex/class_server_link.tex
@@ -6,7 +6,8 @@
 
 
 
-Граф наследования\+:Server\+Link\+:\nopagebreak
+Граф наследования\+:Server\+Link\+:
+\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -15,7 +16,8 @@
 \end{figure}
 
 
-Граф связей класса Server\+Link\+:\nopagebreak
+Граф связей класса Server\+Link\+:
+\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
