--- a/documentation/latex/classcon__handler.tex
+++ b/documentation/latex/classcon__handler.tex
@@ -11,7 +11,8 @@
 
 
 
-Граф наследования\+:con\+\_\+handler\+:\nopagebreak
+Граф наследования\+:con\+\_\+handler\+:
+\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
@@ -20,7 +21,8 @@
 \end{figure}
 
 
-Граф связей класса con\+\_\+handler\+:\nopagebreak
+Граф связей класса con\+\_\+handler\+:
+\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
