--- a/documentation/latex/dir_075bb3ff235063c77951cd176d15a741.tex
+++ b/documentation/latex/dir_075bb3ff235063c77951cd176d15a741.tex
@@ -1,6 +1,7 @@
 \hypertarget{dir_075bb3ff235063c77951cd176d15a741}{}\section{Содержание директории server}
 \label{dir_075bb3ff235063c77951cd176d15a741}\index{Содержание директории server@{Содержание директории server}}
-Директория графа зависимостей server\+:\nopagebreak
+Директория графа зависимостей server\+:
+\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
