--- a/documentation/latex/dir_aec46070e25e2e5fb0789c4048a4272f.tex
+++ b/documentation/latex/dir_aec46070e25e2e5fb0789c4048a4272f.tex
@@ -1,6 +1,7 @@
 \hypertarget{dir_aec46070e25e2e5fb0789c4048a4272f}{}\section{Содержание директории src}
 \label{dir_aec46070e25e2e5fb0789c4048a4272f}\index{Содержание директории src@{Содержание директории src}}
-Директория графа зависимостей src\+:\nopagebreak
+Директория графа зависимостей src\+:
+\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
