--- a/documentation/latex/group__battleshiproyale.tex
+++ b/documentation/latex/group__battleshiproyale.tex
@@ -1,6 +1,7 @@
 \hypertarget{group__battleshiproyale}{}\section{Battle\+Shiproyale.\+h}
 \label{group__battleshiproyale}\index{BattleShiproyale.h@{BattleShiproyale.h}}
-Граф связей класса Battle\+Shiproyale.\+h\+:\nopagebreak
+Граф связей класса Battle\+Shiproyale.\+h\+:
+\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
