--- a/documentation/latex/group__battleshiproyalecpp.tex
+++ b/documentation/latex/group__battleshiproyalecpp.tex
@@ -1,6 +1,7 @@
 \hypertarget{group__battleshiproyalecpp}{}\section{Battle\+Shiproyale.\+cpp}
 \label{group__battleshiproyalecpp}\index{BattleShiproyale.cpp@{BattleShiproyale.cpp}}
-Граф связей класса Battle\+Shiproyale.\+cpp\+:\nopagebreak
+Граф связей класса Battle\+Shiproyale.\+cpp\+:
+\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
