--- a/documentation/latex/group__con__handler__cpp.tex
+++ b/documentation/latex/group__con__handler__cpp.tex
@@ -1,6 +1,7 @@
 \hypertarget{group__con__handler__cpp}{}\section{con\+\_\+handler.\+cpp}
 \label{group__con__handler__cpp}\index{con\_handler.cpp@{con\_handler.cpp}}
-Граф связей класса con\+\_\+handler.\+cpp\+:\nopagebreak
+Граф связей класса con\+\_\+handler.\+cpp\+:
+\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
