--- a/documentation/latex/group__con__handler__h.tex
+++ b/documentation/latex/group__con__handler__h.tex
@@ -1,6 +1,7 @@
 \hypertarget{group__con__handler__h}{}\section{con\+\_\+handler.\+h}
 \label{group__con__handler__h}\index{con\_handler.h@{con\_handler.h}}
-Граф связей класса con\+\_\+handler.\+h\+:\nopagebreak
+Граф связей класса con\+\_\+handler.\+h\+:
+\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
