--- a/documentation/latex/group__dbcpp.tex
+++ b/documentation/latex/group__dbcpp.tex
@@ -1,6 +1,7 @@
 \hypertarget{group__dbcpp}{}\section{D\+B.\+cpp}
 \label{group__dbcpp}\index{DB.cpp@{DB.cpp}}
-Граф связей класса D\+B.\+cpp\+:\nopagebreak
+Граф связей класса D\+B.\+cpp\+:
+\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
