--- a/documentation/latex/group__dbh.tex
+++ b/documentation/latex/group__dbh.tex
@@ -1,6 +1,7 @@
 \hypertarget{group__dbh}{}\section{D\+B.\+h}
 \label{group__dbh}\index{DB.h@{DB.h}}
-Граф связей класса D\+B.\+h\+:\nopagebreak
+Граф связей класса D\+B.\+h\+:
+\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
