--- a/documentation/latex/group__rand__ssecpp.tex
+++ b/documentation/latex/group__rand__ssecpp.tex
@@ -1,6 +1,7 @@
 \hypertarget{group__rand__ssecpp}{}\section{rand\+\_\+sse.\+cpp}
 \label{group__rand__ssecpp}\index{rand\_sse.cpp@{rand\_sse.cpp}}
-Граф связей класса rand\+\_\+sse.\+cpp\+:\nopagebreak
+Граф связей класса rand\+\_\+sse.\+cpp\+:
+\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
