--- a/documentation/latex/group__rand__sseh.tex
+++ b/documentation/latex/group__rand__sseh.tex
@@ -1,6 +1,7 @@
 \hypertarget{group__rand__sseh}{}\section{rand\+\_\+sse.\+h}
 \label{group__rand__sseh}\index{rand\_sse.h@{rand\_sse.h}}
-Граф связей класса rand\+\_\+sse.\+h\+:\nopagebreak
+Граф связей класса rand\+\_\+sse.\+h\+:
+\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
