--- a/documentation/latex/group__regexcpp.tex
+++ b/documentation/latex/group__regexcpp.tex
@@ -1,6 +1,7 @@
 \hypertarget{group__regexcpp}{}\section{Regex.\+cpp}
 \label{group__regexcpp}\index{Regex.cpp@{Regex.cpp}}
-Граф связей класса Regex.\+cpp\+:\nopagebreak
+Граф связей класса Regex.\+cpp\+:
+\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
