--- a/documentation/latex/group__regexh.tex
+++ b/documentation/latex/group__regexh.tex
@@ -1,6 +1,7 @@
 \hypertarget{group__regexh}{}\section{Regex.\+h}
 \label{group__regexh}\index{Regex.h@{Regex.h}}
-Граф связей класса Regex.\+h\+:\nopagebreak
+Граф связей класса Regex.\+h\+:
+\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
