--- a/documentation/latex/group__server.tex
+++ b/documentation/latex/group__server.tex
@@ -5,7 +5,8 @@
 Сервер  
 
 
-Граф связей класса Server\+:\nopagebreak
+Граф связей класса Server\+:
+\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
