--- a/documentation/latex/group__servercpp.tex
+++ b/documentation/latex/group__servercpp.tex
@@ -1,6 +1,7 @@
 \hypertarget{group__servercpp}{}\section{Server.\+cpp}
 \label{group__servercpp}\index{Server.cpp@{Server.cpp}}
-Граф связей класса Server.\+cpp\+:\nopagebreak
+Граф связей класса Server.\+cpp\+:
+\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
