--- a/documentation/latex/group__serverh.tex
+++ b/documentation/latex/group__serverh.tex
@@ -1,6 +1,7 @@
 \hypertarget{group__serverh}{}\section{Server.\+h}
 \label{group__serverh}\index{Server.h@{Server.h}}
-Граф связей класса Server.\+h\+:\nopagebreak
+Граф связей класса Server.\+h\+:
+\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
