--- a/documentation/latex/server_2src_2_message_8h.tex
+++ b/documentation/latex/server_2src_2_message_8h.tex
@@ -1,7 +1,8 @@
 \hypertarget{server_2src_2_message_8h}{}\section{Файл Message.\+h}
 \label{server_2src_2_message_8h}\index{Message.h@{Message.h}}
 {\ttfamily \#include $<$string$>$}\newline
-Граф включаемых заголовочных файлов для server/src/\+Message.h\+:\nopagebreak
+Граф включаемых заголовочных файлов для server/src/\+Message.h\+:
+\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
