--- a/documentation/latex/server_2src_2con__handler_8h.tex
+++ b/documentation/latex/server_2src_2con__handler_8h.tex
@@ -7,14 +7,16 @@ handler
 
 {\ttfamily \#include $<$boost/asio.\+hpp$>$}\newline
 {\ttfamily \#include $<$boost/enable\+\_\+shared\+\_\+from\+\_\+this.\+hpp$>$}\newline
-Граф включаемых заголовочных файлов для server/src/con\+\_\+handler.h\+:\nopagebreak
+Граф включаемых заголовочных файлов для server/src/con\+\_\+handler.h\+:
+\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
 \includegraphics[width=286pt]{server_2src_2con__handler_8h__incl}
 \end{center}
 \end{figure}
-Граф файлов, в которые включается этот файл\+:\nopagebreak
+Граф файлов, в которые включается этот файл\+:
+\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
