--- a/documentation/latex/struct_u_i_d.tex
+++ b/documentation/latex/struct_u_i_d.tex
@@ -6,7 +6,8 @@
 
 
 
-Граф связей класса U\+ID\+:\nopagebreak
+Граф связей класса U\+ID\+:
+\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
