--- a/documentation/latex/_d_b_8h.tex
+++ b/documentation/latex/_d_b_8h.tex
@@ -7,14 +7,16 @@
 
 {\ttfamily \#include $<$sqlite3.\+h$>$}\newline
 {\ttfamily \#include \char`\"{}Battleship\+Royale.\+h\char`\"{}}\newline
-Граф включаемых заголовочных файлов для D\+B.\+h\+:\nopagebreak
+Граф включаемых заголовочных файлов для D\+B.\+h\+:
+\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
 \includegraphics[width=250pt]{_d_b_8h__incl}
 \end{center}
 \end{figure}
-Граф файлов, в которые включается этот файл\+:\nopagebreak
+Граф файлов, в которые включается этот файл\+:
+\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
