--- a/documentation/latex/_regex_8h.tex
+++ b/documentation/latex/_regex_8h.tex
@@ -6,14 +6,16 @@
 
 
 {\ttfamily \#include $<$string$>$}\newline
-Граф включаемых заголовочных файлов для Regex.\+h\+:\nopagebreak
+Граф включаемых заголовочных файлов для Regex.\+h\+:
+\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
 \includegraphics[width=133pt]{_regex_8h__incl}
 \end{center}
 \end{figure}
-Граф файлов, в которые включается этот файл\+:\nopagebreak
+Граф файлов, в которые включается этот файл\+:
+\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
