--- a/documentation/latex/asio_2server_2_server_8cpp.tex
+++ b/documentation/latex/asio_2server_2_server_8cpp.tex
@@ -2,7 +2,8 @@
 \label{asio_2server_2_server_8cpp}\index{Server.cpp@{Server.cpp}}
 {\ttfamily \#include \char`\"{}Server.\+h\char`\"{}}\newline
 {\ttfamily \#include $<$boost/bind.\+hpp$>$}\newline
-Граф включаемых заголовочных файлов для asio/server/\+Server.cpp\+:\nopagebreak
+Граф включаемых заголовочных файлов для asio/server/\+Server.cpp\+:
+\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
