--- a/documentation/latex/asio_2server_2_server_8h.tex
+++ b/documentation/latex/asio_2server_2_server_8h.tex
@@ -1,14 +1,16 @@
 \hypertarget{asio_2server_2_server_8h}{}\section{Файл Server.\+h}
 \label{asio_2server_2_server_8h}\index{Server.h@{Server.h}}
 {\ttfamily \#include \char`\"{}con\+\_\+handler.\+h\char`\"{}}\newline
-Граф включаемых заголовочных файлов для asio/server/\+Server.h\+:\nopagebreak
+Граф включаемых заголовочных файлов для asio/server/\+Server.h\+:
+\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
 \includegraphics[width=286pt]{asio_2server_2_server_8h__incl}
 \end{center}
 \end{figure}
-Граф файлов, в которые включается этот файл\+:\nopagebreak
+Граф файлов, в которые включается этот файл\+:
+\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
