--- a/documentation/latex/dir_68267d1309a1af8e8297ef4c3efbcdba.tex
+++ b/documentation/latex/dir_68267d1309a1af8e8297ef4c3efbcdba.tex
@@ -1,6 +1,7 @@
 \hypertarget{dir_68267d1309a1af8e8297ef4c3efbcdba}{}\section{Содержание директории src}
 \label{dir_68267d1309a1af8e8297ef4c3efbcdba}\index{Содержание директории src@{Содержание директории src}}
-Директория графа зависимостей src\+:\nopagebreak
+Директория графа зависимостей src\+:
+\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
