--- a/documentation/latex/group__battleship-royale.tex
+++ b/documentation/latex/group__battleship-royale.tex
@@ -5,7 +5,8 @@
 Общие файлы  
 
 
-Граф связей класса Battleship-\/\+Royale\+:\nopagebreak
+Граф связей класса Battleship-\/\+Royale\+:
+\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
