--- a/documentation/latex/rand__sse_8cpp.tex
+++ b/documentation/latex/rand__sse_8cpp.tex
@@ -7,7 +7,8 @@
 
 {\ttfamily \#include \char`\"{}emmintrin.\+h\char`\"{}}\newline
 {\ttfamily \#include \char`\"{}rand\+\_\+sse.\+h\char`\"{}}\newline
-Граф включаемых заголовочных файлов для rand\+\_\+sse.\+cpp\+:\nopagebreak
+Граф включаемых заголовочных файлов для rand\+\_\+sse.\+cpp\+:
+\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
