--- a/documentation/latex/server_2src_2_server_8cpp.tex
+++ b/documentation/latex/server_2src_2_server_8cpp.tex
@@ -7,7 +7,8 @@
 
 {\ttfamily \#include \char`\"{}Server.\+h\char`\"{}}\newline
 {\ttfamily \#include $<$boost/bind.\+hpp$>$}\newline
-Граф включаемых заголовочных файлов для server/src/\+Server.cpp\+:\nopagebreak
+Граф включаемых заголовочных файлов для server/src/\+Server.cpp\+:
+\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
