--- a/documentation/latex/server_2src_2_server_8h.tex
+++ b/documentation/latex/server_2src_2_server_8h.tex
@@ -6,14 +6,16 @@
 
 
 {\ttfamily \#include \char`\"{}con\+\_\+handler.\+h\char`\"{}}\newline
-Граф включаемых заголовочных файлов для server/src/\+Server.h\+:\nopagebreak
+Граф включаемых заголовочных файлов для server/src/\+Server.h\+:
+\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
 \includegraphics[width=286pt]{server_2src_2_server_8h__incl}
 \end{center}
 \end{figure}
-Граф файлов, в которые включается этот файл\+:\nopagebreak
+Граф файлов, в которые включается этот файл\+:
+\nopagebreak
 \begin{figure}[H]
 \begin{center}
 \leavevmode
