--- a/src/testing/translation/CMakeLists.txt
+++ b/src/testing/translation/CMakeLists.txt
@@ -19,6 +19,7 @@ target_link_libraries(${BR_TEST_TRANSLATE_NAME} ${USE_LIB})
 
 target_include_directories(${BR_TEST_TRANSLATE_NAME} PUBLIC ${Boost_INCLUDE_DIRS})
 target_include_directories(${BR_TEST_TRANSLATE_NAME} PUBLIC ${SPDLOG_LIB_INCLUDE})
+#target_include_directories(${BR_TEST_TRANSLATE_NAME} PUBLIC ${TINYXML2_LIB_INCLUDE})
 
 #if(BR_UNIX)
 #	target_link_libraries(${BR_TEST_TRANSLATE_NAME} sqlite3)
